src/objects/loan__K4_Segment__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>loan__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>K4 Segments</relationshipLabel>
        <relationshipName>K4_Segments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Balloon_Payment_Amount__c</fullName>
        <label>Balloon Payment Amount</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Balloon_Payment_Due_Date__c</fullName>
        <label>Balloon Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Base_Segment_Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Base Segment Definition</label>
        <referenceTo>loan__Base_Segment_Definition__c</referenceTo>
        <relationshipLabel>K4 Segments</relationshipLabel>
        <relationshipName>K4_Segments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Deffered_Payment_Start_Date__c</fullName>
        <label>Deffered Payment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Reserved__c</fullName>
        <label>Reserved</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Segment_Identifier__c</fullName>
        <label>Segment Identifier</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Specialized_Payment_Indicator__c</fullName>
        <label>Specialized Payment Indicator</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>K4 Segment</label>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>K4 Segments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>